bucketlist/Static/style.css
@import url(http://fonts.googleapis.com/css?family=Ubuntu);
@import url(http://fonts.googleapis.com/css?family=Aubrey);

/* Entire body styling*/

body {
  background-image: url("bubbles.png");
  background-repeat: repeat-y;
  background-color: #cce0f1;
}

/* The Conquer Tomorrow image */
#logo {
  position: fixed;
  top: 10px;
  left: 40%;
}

/* Navigation styling */
#navlist {
    list-style-type: none;
    margin: 0;
    text-align: center;
    z-index: 100;
    position: fixed;
    top: 80px;
    left: 230px;
}

li.navlinks {
    font-family: 'ubuntu';
    float: left;
    font-size: 20px;
    padding: 15px;
}

#link {
      color: #ffffff;
}

#navbar {
  width: 100%;
  position: fixed;
  top: 80px;
  left: 230px;
}

#rectangle {
  border-radius: 25px;
  background: #9065a1;
  padding: 0px;
  width: 970px;
  height: 30px;
  position: fixed;
  top: 90px;
  left: 230px;
  z-index: -100;
}


a {
  text-decoration: none;
}

h1 {
  clear: both;
  font-family: 'aubrey', sans-serif;
}

h3 {
  cursor: pointer;
  font-family: 'aubrey', sans-serif;
}

/* New Adventure page */
#newadventure {
  font-family: 'ubuntu';
}

#newadventuretext {
  border-radius: 0;
  -webkit-appearance: textfield;
  width: 400px;
  height: 250px;
}

textarea {
  background: url(http://i.stack.imgur.com/ynxjD.png) repeat-y;
  font: normal 14px verdana;
  line-height: 25px;
  padding: 2px 10px;
  border: solid 1px #ddd;
  width:100%;
  height:95%;
  resize: none;
}

/* Discover page-- Styling done in JS */
.discover_tabs {
  display:none;
}


/* All the buttons in general */
.buttons {
  -moz-box-shadow:inset 0px 1px 3px 0px #91b8b3;
  -webkit-box-shadow:inset 0px 1px 3px 0px #91b8b3;
  box-shadow:inset 0px 1px 3px 0px #91b8b3;
  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #768d87), color-stop(1, #6c7c7c));
  background:-moz-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
  background:-webkit-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
  background:-o-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
  background:-ms-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
  background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#768d87', endColorstr='#6c7c7c',GradientType=0);
  background-color:#768d87;
  -moz-border-radius:5px;
  -webkit-border-radius:5px;
  border-radius:5px;
  border:1px solid #566963;
  display:inline-block;
  cursor:pointer;
  color:#ffffff;
  font-family:Arial;
  font-size:15px;
  font-weight:bold;
  padding:11px 23px;
  text-decoration:none;
  text-shadow:0px -1px 0px #2b665e;
}

.buttons:hover {
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6c7c7c), color-stop(1, #768d87));
	background:-moz-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
	background:-webkit-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
	background:-o-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
	background:-ms-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
	background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#6c7c7c', endColorstr='#768d87',GradientType=0);
	background-color:#6c7c7c;
}

.buttons:active {
	position:relative;
	top:1px;
}

/* referenced in .py file-- for the sign in or register */
#greeting {
  position: fixed;
  top: 370px;
  left: 258px;
}

/* The content on every html page linked */
.page_content {
  position: absolute;
  overflow-y: scroll;
  top: 120px;
  bottom: 0;
  right: 0;
  left: 258px;
  width: 950px;
  height: 80%;
}

